--- a/AboutFood.Web/AboutFood.Web.csproj
+++ b/AboutFood.Web/AboutFood.Web.csproj
@@ -180,6 +180,12 @@
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AboutFood.Data\AboutFood.Data.csproj">
+      <Project>{AAB2DF65-BC69-4EB3-8B30-B93E5B783916}</Project>
+      <Name>AboutFood.Data</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
